platform-tools/kubecost/base/namespace.yaml
---
# Namespace for Kubecost
apiVersion: v1
kind: Namespace
metadata:
  name: kubecost
  labels:
    name: kubecost
    app.kubernetes.io/name: kubecost
    app.kubernetes.io/part-of: platform-tools
    app.kubernetes.io/managed-by: argocd
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    argocd.argoproj.io/sync-wave: "0"
